--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>ISLEX</title>
+    <title>Lexia</title>
 
     <!--<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,600,600i|Cormorant+Infant:400i" media="all" />-->
     <script src="//www.google.com/recaptcha/api.js?render=explicit&hl=is"></script>
