sam menu á ginnungagap

--- a/public/index.html
+++ b/public/index.html
@@ -52,8 +52,8 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <link rel="stylesheet" type="text/css" href="//nidhoggur.rhi.hi.is/sam-menu/style.css">
-    <script type="text/javascript" src="//nidhoggur.rhi.hi.is/sam-menu/main.js"></script>
+    <link rel="stylesheet" type="text/css" href="//ginnungagap.arnastofnun.is/sam-menu/style.css">
+    <script type="text/javascript" src="//ginnungagap.arnastofnun.is/sam-menu/main.js"></script>
     <div id="_sam_portal_menu"></div>
   </body>
 </html>
