--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
     <script>
-      var samGaId = 'G-24WKCEDYRW');
+      var samGaId = 'G-24WKCEDYRW';
 	</script>
 	<!-- Matomo -->
 	<script>
